--- a/snake/styles.css
+++ b/snake/styles.css
@@ -24,7 +24,7 @@ section {
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-  height: 87vh;
+  height: 82vh;
   width: 100%;
 }
 
@@ -45,11 +45,21 @@ section button {
 
 section div{
   position: absolute;
-  padding: 2dvh;
+  padding: 2vh;
   left: 35.3%;
   top: 3.5%;
   background-color: white;
   border: 2px solid black;
+}
+
+ p{
+  position: relative;
+  padding: 1vh;
+  left: 36.8%;
+  width: 425px;
+  background-color: white;
+  border: none;
+  color:black;
 }
 
 section::after {
